clean + fixed menu on small screens

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,7 +1,7 @@
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
- * Copyright 2011-2018 Twitter, Inc.
+ * Copyright 2011-2018 Twitter, Inc.https://pietrobenotto.github.io
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
@@ -161,8 +161,7 @@ button:focus {
     outline: 5px auto -webkit-focus-ring-color
 }
 
-button,
-select {
+button {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
@@ -173,8 +172,7 @@ button {
     overflow: visible
 }
 
-button,
-select {
+button {
     text-transform: none
 }
 
@@ -975,74 +973,6 @@ a>code {
     display: none
 }
 
-.custom-select {
-    display: inline-block;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    padding: .375rem 1.75rem .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    vertical-align: middle;
-    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
-    background-size: 8px 10px;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none
-}
-
-.custom-select:focus {
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: 0 0 0 .2rem rgba(128, 189, 255, .5)
-}
-
-.custom-select:focus::-ms-value {
-    color: #495057;
-    background-color: #fff
-}
-
-.custom-select[multiple],
-.custom-select[size]:not([size="1"]) {
-    height: auto;
-    padding-right: .75rem;
-    background-image: none
-}
-
-.custom-select:disabled {
-    color: #6c757d;
-    background-color: #e9ecef
-}
-
-.custom-select::-ms-expand {
-    opacity: 0
-}
-
-.custom-select-sm {
-    height: calc(1.8125rem + 2px);
-    padding-top: .375rem;
-    padding-bottom: .375rem;
-    font-size: 75%
-}
-
-.custom-select-lg {
-    height: calc(2.875rem + 2px);
-    padding-top: .375rem;
-    padding-bottom: .375rem;
-    font-size: 125%
-}
-
-.custom-select {
-    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
-}
-
-@media screen and (prefers-reduced-motion:reduce) {
-    .custom-select {
-        transition: none
-    }
-}
-
 .nav {
     display: -ms-flexbox;
     display: flex;
@@ -1425,41 +1355,6 @@ a>code {
     flex: 1
 }
 
-.carousel {
-    position: relative
-}
-
-.carousel-inner {
-    position: relative;
-    width: 100%;
-    overflow: hidden
-}
-
-.carousel-item {
-    position: relative;
-    display: none;
-    -ms-flex-align: center;
-    align-items: center;
-    width: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000px;
-    perspective: 1000px
-}
-
-.carousel-item.active {
-    display: block;
-    transition: -webkit-transform .6s ease;
-    transition: transform .6s ease;
-    transition: transform .6s ease, -webkit-transform .6s ease
-}
-
-@media screen and (prefers-reduced-motion:reduce) {
-    .carousel-item.active {
-        transition: none
-    }
-}
-
 @supports ((-webkit-transform-style:preserve-3d) or (transform-style:preserve-3d)) {
 
     .carousel-item-next.carousel-item-left,
@@ -1467,11 +1362,6 @@ a>code {
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0)
     }
-}
-
-.active.carousel-item-right {
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%)
 }
 
 @supports ((-webkit-transform-style:preserve-3d) or (transform-style:preserve-3d)) {
@@ -1490,25 +1380,6 @@ a>code {
         -webkit-transform: translate3d(-100%, 0, 0);
         transform: translate3d(-100%, 0, 0)
     }
-}
-
-.carousel-fade .carousel-item {
-    opacity: 0;
-    transition-duration: .6s;
-    transition-property: opacity
-}
-
-.carousel-fade .carousel-item.active {
-    opacity: 1
-}
-
-.carousel-fade .active.carousel-item-right {
-    opacity: 0
-}
-
-.carousel-fade .carousel-item.active {
-    -webkit-transform: translateX(0);
-    transform: translateX(0)
 }
 
 @supports ((-webkit-transform-style:preserve-3d) or (transform-style:preserve-3d)) {
